--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-top-tabs": "^5.2.5",
     "@react-navigation/native": "^5.3.2",
     "@react-navigation/stack": "^5.3.6",
+    "firebase": "^7.14.5",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -24,7 +25,8 @@
     "react-native-tab-view": "^2.14.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.5"
+    "redux-form": "^8.3.5",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
