--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^7.1.4",
+    "@react-native-firebase/auth": "^8.0.3",
     "@react-navigation/bottom-tabs": "^5.4.4",
     "@react-navigation/material-top-tabs": "^5.2.5",
     "@react-navigation/native": "^5.3.2",
