--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^7.1.4",
     "@react-native-firebase/auth": "^8.0.3",
+    "@react-native-firebase/firestore": "^7.1.2",
     "@react-navigation/bottom-tabs": "^5.4.4",
     "@react-navigation/material-top-tabs": "^5.2.5",
     "@react-navigation/native": "^5.3.2",
     "@react-navigation/stack": "^5.3.6",
-    "firebase": "^7.14.5",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
